--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,129 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap');
-
+@import url(./navbar.css);
+@import url(./footer.css);
+@import url(./fonts.css);
 
 body {
-    margin: 0px;
+    margin: 0;
     background-color: #191a1f;
+    color: #fff;
 }
 
-.navbar {
-    position: fixed;
-    height: 100px;
-    width: 100%;
-    top: 0;
-    padding: 0;
-    background-color: #191a1f;
-    color: white;
-    -webkit-box-shadow: 0px -3px 43px -3px rgba(0,0,0,0.85);
-    -moz-box-shadow: 0px -3px 43px -3px rgba(0,0,0,0.85);
-    box-shadow: 0px -3px 43px -3px rgba(0,0,0,0.85);
-    z-index: 100;
-}
-
-#dessert {
-    /*font-family: "GenomeThin";
-    font-weight: normal;
-    font-style: normal;
-    color: white;*/
-    font-family: 'Josefin Sans', sans-serif;
-    color: white;
-}
-
-#navbar-logo {
-    height: 70px;
-    width: 65px;
-    position: fixed;
-    top: 15px;
-    left: 47%;
-    z-index: 10;
-    background-image: url("../photos/logow.png");
-    background-size: contain;
-}
-
+/* blog content*/
 .container {
     display:grid;
+    grid-gap: 10px;
     grid-template-rows: 100vh 100vh 20vh;
     grid-template-areas: 
     "hd"
     "ct"
     "ft";
-    /*for now*/
-    border: 2px solid yellow;
 }
 
+
+/* latest post */
 .header {
     grid-area:hd;
     width: 100%;
     height: 100%;
-    background-image: url("../photos/pizza.jpeg");
+    background-image: url(../photos/pizza.jpeg);
     background-size: cover;
-    opacity: 20%;
+    opacity: 80%;
+    position: relative;
 }
 
+#latest-post-box {
+    height: 300px;
+    width: 500px;
+    background-color: #000;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -150px;
+    margin-left: -250px;
+    border: solid #fff 1px;
+    z-index: 1;
+    opacity: 80%;
+}
+
+
+/* other posts */
 .post-container {
+    margin-left: 100px;
     grid-area: ct;
     display: grid;
-    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-gap: 10px;
+    grid-template-columns: 30% 30% 30%;
     grid-template-rows: 50vh 50vh;
     grid-template-areas:
     "tl tm tr"
     "bl bm br";
     background-color: #191a1f;
-    /*for now*/
-    border: 2px solid red;
+    opacity: 100%;
 }
 
 .post {
-    border: 2px solid green;
     opacity: 50%;
-}
-
-.post:hover {
-    opacity:100%;
+    position: relative;
 }
 
 #post-one {
     grid-area: tl;
-    background-image: url("../photos/cake.jpeg");
+    background-image: url(../photos/cake.jpeg);
     background-size: cover;
 }
 
 #post-two {
     grid-area: tm;
-    background-image: url("../photos/breakfast.jpeg");
+    background-image: url(../photos/breakfast.jpeg);
     background-size: cover;
 }
 
 #post-three {
     grid-area: tr;
-    background-image: url("../photos/cocktail3.jpeg");
+    background-image: url(../photos/cocktail3.jpeg);
     background-size: cover;
 
 }
 
 #post-four {
     grid-area: bl;
-    background-image: url("../photos/seasoning.jpeg");
+    background-image: url(../photos/seasoning.jpeg);
     background-size: cover;
 }
 
 #post-five {
     grid-area: bm;
-    background-image: url("../photos/cake.jpeg");
+    background-image: url(../photos/washing.jpeg);
     background-size: cover;
 }
 
 #post-six {
     grid-area: br;
-    background-image: url("../photos/kids.jpeg");
+    background-image: url(../photos/kids.jpeg);
     background-size: cover;
 }
 
-.footer {
-    grid-area: ft;
-    border: 2px solid blue;
+
+/* post description */
+.post-box {
+    height: 50%;
+    width: 60%;
+    background-color: #000;
+    color: #fff;
+    position: absolute;
+    top: 65px;
+    left: 60px;
+    border: solid #fff 1px;
+    margin: 10px 10px 10px 10px;
+    z-index: 1;
+    opacity: 0;
 }
 
+.post:hover {
+    opacity: 100%;
+}
 
-
+.post:hover .post-box {
+    opacity: 80%;
+}
