--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,16 @@
 @import url(./navbar.css);
 @import url(./footer.css);
 @import url(./fonts.css);
+@import url(./blog-post.css);
 
 body {
     margin: 0;
     background-color: #191a1f;
-    color: #fff;
 }
 
 /* blog content*/
 .container {
-    display:grid;
+    display: grid;
     grid-gap: 10px;
     grid-template-rows: 100vh 100vh 20vh;
     grid-template-areas: 
@@ -22,7 +22,7 @@ body {
 
 /* latest post */
 .header {
-    grid-area:hd;
+    grid-area: hd;
     width: 100%;
     height: 100%;
     background-image: url(../photos/pizza.jpeg);
