--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -1,29 +1,41 @@
+@import url(./navbar.css);
+@import url(./footer.css);
+@import url(./fonts.css);
+
+
+body {
+    margin: 0;
+    background-color: #191a1f;
+}
+
+
+/* content */
 #post-container {
     display: grid;
-    grid-gap: 10px;
-    grid-template-rows: 100vh auto 20vh;
+    grid-template-rows: 80vh auto 20vh;
     grid-template-areas: 
     "hd"
     "ct"
     "ft";
-    border: green 1px solid;
 }
 
+
+/* header */
 #post-header {
     grid-area: hd;
     width: 100%;
-    height: 100%;
+    height: 80%;
     background-image: url(../photos/pizza.jpeg);
+    background-position: center;
     background-size: cover;
     position: absolute;
     opacity: 80%;
-    border: yellow 1px solid;
 }
 
-#article-container {
+
+/* article */
+#content-container {
     grid-area: ct;
-    margin-left: 100px;
-    margin-right: 100px;
     background-color: #fff;
     display: grid;
     grid-gap: 20px;
@@ -32,24 +44,22 @@
     grid-template-areas:
     "tt tt tt"
     "ar ar as";
-    /* to delete */
-    border: red solid 1px;
     color: black;
 }
 
 #title-box {
     grid-area: tt;
-    width: 84%;
+    width: 100%;
     height: 100px;
     align-items: center;
     justify-content: space-evenly;
     position: absolute;
-    border: violet 1px solid;
 }
 
-.article {
+
+/* article */
+#article {
     grid-area: ar;
-    border: blue 1px solid;
     padding: 30px;
 }
 
@@ -57,57 +67,184 @@
     max-width: 100%;
 }
 
+
+/* aside */
 #aside {
     grid-area: as;
-    border: solid grey 1px;
     display: grid;
-    grid-gap: 50px;
+    border-left: #dddbdb solid 1px;
+    padding: 0 30px;
+    margin: 0 -30px;
     grid-template-columns: 100%;
-    grid-template-rows: 450px auto;
+    grid-template-rows: auto auto;
     grid-template-areas:
     "au"
     "rm";
 }
 
+
+/* author */
 #author-info {
     grid-area: au;
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: auto;
 }
 
 #author-photo {
     background-image: url(../photos/author.png);
     background-size: contain;
-    border: brown 1px solid;
     height: 250px;
     width: 245px;
 }
 
+
+/* read more */
 .read-more-box {
     border: solid #000 1px;
     margin: 30px 10px;
 }
 
+.read-more-title {
+    padding-left: 20px;
+}
+
 .read-more-photo {
-    margin: 20px;
+    margin: 5px 20px 20px 20px;
     max-width: auto;
-    height: 200px;
+    height: 220px;
 }
 
 #rm-one {
     background-image: url(../photos/kids.jpeg);
     background-size: cover;
+    background-position: center;
 }
 
 #rm-two {
     background-image: url(../photos/cocktail3.jpeg);
     background-size: cover;
-    background-position-y: -90px;
+    background-position: center;
 }
 
 #rm-three {
     background-image: url(../photos/breakfast.jpeg);
     background-size: cover;
-    background-position-y: -90px;
+    background-position: center;
+}
+
+
+@media (min-width: 600px) and (max-width: 920px) {
+    /* navbar */
+    .nv-title {
+        font-size: 25px;
+        margin: 0 10px;
+    }
+
+    #nv-logo-img {
+        min-height: 40px;
+        min-width: 36px;
+        top: 35px;
+        left: 20px;
+    }
+
+    #nv-logo-text {
+        min-height: 40px;
+        width: 35px;
+        top: 26px;
+        left: 55px;
+    }
+
+    /* header */
+    #post-container {
+        grid-template-rows: 50vh auto 20vh;
+    }
+
+    #post-header {
+        grid-area: hd;
+        max-height: 50vh;
+    }
+
+
+    /* aside */
+    #aside {
+        grid-template-rows: auto auto;
+        grid-gap: 0;
+    }
+
+
+    /* author */
+    #author-photo {
+        background-size: 180px 180px;
+        height: 180px;
+        width: 180px;
+    }
+
+    #author-name {
+        font-size: 30px;
+    }
+
+    #author-bio {
+        font-size: 20px;
+        padding: 0 10px;
+    }
+
+    /* read more */
+    #read-more-header {
+        font-size: 40px;
+    }
+
+    .read-more-title {
+        font-size: 23px;
+    }
+}
+
+
+@media (max-width: 600px) {
+    /* navbar */
+    .nv-title {
+        font-size: 20px;
+        margin: 0 3px;
+    }
+
+    #nv-logo-img {
+        min-height: 40px;
+        min-width: 36px;
+        top: 35px;
+        left: 20px;
+    }
+
+    #nv-logo-text {
+        min-height: 40px;
+        width: 35px;
+        top: 26px;
+        left: 55px;
+    }
+    
+
+    /* content */
+    #post-container {
+        display: grid;
+        grid-gap: 0;
+        grid-template-rows: 50vh auto 20vh;
+    }
+
+    #post-header {
+        min-width: 100%;
+        background-position: center;
+        height: 50vh;
+    }
+
+
+    /* article */
+    #content-container {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100px auto;
+        grid-template-areas:
+        "tt"
+        "ar"
+        "as";
+    }
 }
