--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 @import url(./navbar.css);
 @import url(./footer.css);
 @import url(./fonts.css);
-@import url(./blog-post.css);
+
 
 body {
     margin: 0;
+    color: #fff;
     background-color: #191a1f;
 }
+
 
 /* blog content*/
 .container {
@@ -21,35 +23,32 @@ body {
 
 
 /* latest post */
-.header {
+#header {
     grid-area: hd;
-    width: 100%;
-    height: 100%;
     background-image: url(../photos/pizza.jpeg);
     background-size: cover;
     opacity: 80%;
-    position: relative;
 }
 
 #latest-post-box {
     height: 300px;
     width: 500px;
     background-color: #000;
-    color: #fff;
+    border: #fff solid 1px; 
     position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -150px;
     margin-left: -250px;
-    border: solid #fff 1px;
     z-index: 1;
     opacity: 80%;
 }
 
 
-/* other posts */
-.post-container {
-    margin-left: 100px;
+/* older posts */
+#post-container {
+    justify-content: center;
+    min-width: 500px;
     grid-area: ct;
     display: grid;
     grid-gap: 10px;
@@ -109,21 +108,176 @@ body {
 .post-box {
     height: 50%;
     width: 60%;
-    background-color: #000;
-    color: #fff;
-    position: absolute;
     top: 65px;
     left: 60px;
+    position: absolute;
+    background-color: #000;
+    color: #fff;
     border: solid #fff 1px;
-    margin: 10px 10px 10px 10px;
     z-index: 1;
     opacity: 0;
 }
 
 .post:hover {
     opacity: 100%;
+    cursor: pointer;
 }
 
 .post:hover .post-box {
     opacity: 80%;
+}
+
+
+
+@media (min-width: 900px) and (max-width: 1100px) {
+    .older-post-title {
+        font-size: 20px;
+    }
+
+    .older-post-caption {
+        font-size: 17px;
+    }
+}
+
+
+@media (min-width: 600px) and (max-width: 900px) {
+    /* navbar */
+    .nv-title {
+        font-size: 25px;
+        margin: 0 10px;
+    }
+
+    #nv-logo-img {
+        min-height: 40px;
+        min-width: 36px;
+        top: 35px;
+        left: 20px;
+    }
+
+    #nv-logo-text {
+        min-height: 40px;
+        width: 35px;
+        top: 26px;
+        left: 55px;
+    }
+
+    /* content */
+    .older-post-title {
+        font-size: 18px;
+    }
+
+    .older-post-caption {
+        font-size: 14px;
+    }
+
+    .post-box {
+        position: absolute;
+        left: 0;
+    }
+}
+
+
+@media (max-width: 600px) {
+    /* navbar */
+    .nv-title {
+        font-size: 20px;
+        margin: 0 3px;
+    }
+
+    #nv-logo-img {
+        min-height: 40px;
+        min-width: 36px;
+        top: 35px;
+        left: 20px;
+    }
+
+    #nv-logo-text {
+        min-height: 40px;
+        width: 35px;
+        top: 26px;
+        left: 55px;
+    }
+
+
+    /* content */
+    .container {
+        display: grid;
+        grid-gap: 10px;
+        grid-template-rows: 80vh max-content 20vh;
+        grid-template-areas: 
+        "hd"
+        "ct"
+        "ft";
+    }
+
+
+    /* header */
+    #header {
+        grid-area: hd;
+        min-width: 100%;
+        background-position: center;
+        opacity: 80%;
+        height: 80vh;
+    }
+    
+    #latest-post-box {
+        height: 200px;
+        width: 300px;
+        margin-top: 0;
+        margin-left: 0;
+        top: 40%;
+        left: 25%;
+        background-color: #000;
+        border: solid #fff 1px;
+        z-index: 3;
+        opacity: 80%;
+    }
+
+    #latest-post-title {
+        font-size: 30px;
+        margin: 10px;
+    }
+    
+    #latest-post-caption {
+        font-size: 20px;
+        margin: 5px;
+    }
+    
+    #latest-post-read-more {
+        font-size: 18px;
+        margin: 100px 10px 0 200px;
+    }
+
+
+    /* older posts */
+    #post-container {
+        width: auto;
+        height: max-content;
+        min-height: auto;
+        grid-area: ct;
+        display: flex;
+        flex-direction: column;
+        justify-items: stretch;
+        align-items: center;
+        border: tomato 1px solid;
+    }
+
+    .post {
+        width: 80%;
+        height: 500px;
+        margin: 20px;
+        border: yellow solid 1px;
+        opacity: 100%;
+        background-position: center;
+    }
+
+    .post-box {
+        height: 50%;
+        width: 60%;
+        position: absolute;
+        top: 25%;
+        left: 20%;
+        margin: 0;
+        opacity: 80%;
+    }
 }
