--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,25 +1,24 @@
-/* fonts for later */
-/*@import url('https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&display=swap');*/
+@import url('https://fonts.googleapis.com/css2?family=Dawning+of+a+New+Day&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@100&display=swap');
 
 
 /* latest post */
 #latest-post-title {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 50px;
     margin: 20px;
     color: #fff;
 }
 
 #latest-post-caption {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 25px;
     margin: 20px 20px 60px 20px;
     color: #fff;
 }
 
 #latest-post-read-more {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 25px;
     margin: 40px 10px 0 350px;
     text-decoration: none;
@@ -29,21 +28,21 @@
 
 /* regular posts - main page*/
 .older-post-title {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 25px;
     margin: 0 10px;
     color: #fff;
 }
 
 .older-post-caption {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 20px;
     margin: 0 10px 10px 10px;
     color: #fff;
 }
 
 .older-post-read-more {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 16px;
     text-decoration: none;
     position: absolute;
@@ -58,13 +57,13 @@ h1,
 h2,
 h3,
 blockquote {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     color: #000;
 }
 
 p,
 li {
-    /*font-family: 'Alegreya Sans', sans-serif;*/
+    font-family: 'Alegreya Sans', sans-serif;
     color: #000;
 }
 
@@ -79,18 +78,18 @@ blockquote {
 
 .link {
     color: black;
-    /*font-family: 'Alegreya Sans', sans-serif;*/
+    font-family: 'Alegreya Sans', sans-serif;
     font-size: 1em;
 }
 
 .image-caption {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 1em;
     margin-left: 20px;
 }
 
 .end-of-text {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 50px;
     color: black;
     margin-left: 40%;
@@ -99,25 +98,25 @@ blockquote {
 
 /* aside */
 #author-name {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 50px;
     color: #000;
 }
 
 #author-bio {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 25px;
     color: #000;
 }
 
 #read-more-header {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 50px;
     color: black;
 }
 
 .read-more-title {
-    /*font-family: 'Dawning of a New Day', cursive;*/
+    font-family: 'Dawning of a New Day', cursive;
     font-size: 35px;
     color: black;
 }
